[gd_scene load_steps=16 format=3 uid="uid://c7f7rd7ltauxf"]

[ext_resource type="Script" uid="uid://dwbxnol5sxdj" path="res://Levels/Level.gd" id="1_bwnv0"]
[ext_resource type="Environment" uid="uid://bsgowgj65v2n4" path="res://Utilities/GEnv.tres" id="2_345ms"]
[ext_resource type="Script" uid="uid://c2kw3luipogux" path="res://Levels/Board.gd" id="2_ah0qf"]
[ext_resource type="Script" uid="uid://dh6svpcicndr1" path="res://Levels/Camera.gd" id="2_ht8ui"]
[ext_resource type="Script" uid="uid://clpjegnt7rp85" path="res://Levels/HomeSpawns.gd" id="5_f8l1f"]
[ext_resource type="Script" uid="uid://cd8sd1n0dx8dh" path="res://Levels/Characters.gd" id="6_wuvkx"]
[ext_resource type="Script" uid="uid://dianiwfctiy1j" path="res://Levels/PickUps.gd" id="7_jjge0"]
[ext_resource type="Script" uid="uid://gbhkfnslacek" path="res://Levels/Eggs.gd" id="7_rjnlo"]
[ext_resource type="Script" uid="uid://utcy17acy1r1" path="res://Levels/Traps.gd" id="8_6dhlr"]
[ext_resource type="Script" uid="uid://bs3n8adc3cmnt" path="res://Levels/FX.gd" id="8_hbkgd"]
[ext_resource type="AudioStream" uid="uid://2e7xr16nfjex" path="res://Music/ASassySituation.mp3" id="9_fbd0n"]
[ext_resource type="AudioStream" uid="uid://cuij1no40h8sf" path="res://Music/CartoonMischief.mp3" id="10_myk7f"]
[ext_resource type="AudioStream" uid="uid://b2adamdl3fce5" path="res://Menus/BeachWaves.ogg" id="10_n6v67"]
[ext_resource type="AudioStream" uid="uid://c1ibrkbrrcdwv" path="res://PickUps/SFX/IceUnfreeze.ogg" id="11_je7y7"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rjnlo"]
playback_mode = 2
streams_count = 2
stream_0/stream = ExtResource("9_fbd0n")
stream_1/stream = ExtResource("10_myk7f")

[node name="Level" type="Node3D" node_paths=PackedStringArray("board", "camera", "characters", "pick_ups", "traps", "eggs", "fx", "play_area", "home_spawner")]
script = ExtResource("1_bwnv0")
board = NodePath("Board")
camera = NodePath("Camera")
characters = NodePath("Characters")
pick_ups = NodePath("PickUps")
traps = NodePath("Traps")
eggs = NodePath("Eggs")
fx = NodePath("FX")
play_area = NodePath("PlayArea")
home_spawner = NodePath("Board/Squares/HomeSquares")

[node name="UIBoard1" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(256, 76)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = 557.0
offset_right = -776.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121094, 0.121094, 0.121094, 1)

[node name="UIBoard2" type="ColorRect" parent="UIBoard1"]
custom_minimum_size = Vector2(244, 64)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.753906, 0.616073, 0.493017, 1)

[node name="Score" type="Label" parent="UIBoard1/UIBoard2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 4.0
offset_right = 6.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"

[node name="Lives" type="Label" parent="UIBoard1/UIBoard2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 35.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Lives: 2"
vertical_alignment = 2

[node name="Env" type="WorldEnvironment" parent="."]
environment = ExtResource("2_345ms")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.83998, -0.469921, 0.271309, -1.01783e-08, 0.499999, 0.866026, -0.542617, -0.727445, 0.41999, 0, 0, 0)
light_color = Color(1, 0.804167, 0.75, 1)
light_angular_distance = 0.5
shadow_enabled = true
shadow_blur = 4.905
directional_shadow_split_1 = 0.009

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8.32341, 9.46478)
projection = 1
current = true
fov = 33.0
size = 12.0
far = 50.0
script = ExtResource("2_ht8ui")

[node name="Board" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("characters", "egg_squares", "home_squares", "walls")]
script = ExtResource("2_ah0qf")
characters = NodePath("../Characters")
egg_squares = NodePath("Squares/EggSquares")
home_squares = NodePath("Squares/HomeSquares")
walls = NodePath("Walls")

[node name="Squares" type="Node3D" parent="Board"]

[node name="EggSquares" type="Node3D" parent="Board/Squares"]

[node name="HomeSquares" type="MultiplayerSpawner" parent="Board/Squares" node_paths=PackedStringArray("level", "board")]
_spawnable_scenes = PackedStringArray("uid://cfanycyrikuxq")
spawn_path = NodePath(".")
script = ExtResource("5_f8l1f")
level = NodePath("../../..")
board = NodePath("../..")

[node name="Stones" type="Node3D" parent="Board"]

[node name="Walls" type="Node3D" parent="Board"]

[node name="Water" type="Node3D" parent="Board"]

[node name="Characters" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("level", "board", "unfreeze_sfx")]
_spawnable_scenes = PackedStringArray("uid://b2iwuk2gndgr4", "uid://ddgvecm4ml23n")
spawn_path = NodePath(".")
script = ExtResource("6_wuvkx")
level = NodePath("..")
board = NodePath("../Board")
num_enemies = 0
unfreeze_sfx = NodePath("../UnfreezeSFX")

[node name="PickUps" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("level", "characters")]
spawn_path = NodePath(".")
script = ExtResource("7_jjge0")
level = NodePath("..")
characters = NodePath("../Characters")

[node name="Traps" type="MultiplayerSpawner" parent="." node_paths=PackedStringArray("level", "characters")]
spawn_path = NodePath(".")
script = ExtResource("8_6dhlr")
level = NodePath("..")
characters = NodePath("../Characters")

[node name="Eggs" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://bfuiiibm4ogfg")
spawn_path = NodePath(".")
script = ExtResource("7_rjnlo")

[node name="FX" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://dk3hna54702v6")
spawn_path = NodePath(".")
script = ExtResource("8_hbkgd")

[node name="PlayArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_mask = 6
input_ray_pickable = false
monitorable = false

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_rjnlo")
volume_db = -35.0
autoplay = true
bus = &"Music"

[node name="EnvSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_n6v67")
volume_db = -30.0
autoplay = true
bus = &"SFX"
parameters/looping = true

[node name="UnfreezeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_je7y7")
volume_db = -10.0

[connection signal="spawned" from="Characters" to="Camera" method="set_player"]
[connection signal="body_exited" from="PlayArea" to="Characters" method="character_exited"]
